methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:4: error: not found: value growfFlowers
  growfFlowers(Color.CYAN);
  ^