methods.flowerpot.FlowerPot.scala.code
def growpot() {
  growFlowers(Color.RED);
  forward();forward();forward();
  growfFlowers(Color.CYAN);
  right();forward();
  forward();
  left();backward();backward();backward()
  growFlowers(Color.ORANGE);
  backward();
  backward();
  backward();
  right();
  forward();
  forward();
  left();
  growFlowers(Color.PINK);
  forward();forward();forward();
  growFlowers(Color.GREEN);
}

def growFlowers(c: Color) {
  setBrushColor(c);
  brushDown();
  forward();
  left();
  forward();
  backward();
  right();
  forward();
  backward();
  right();
  forward();
  backward();
  left();
  setBrushColor(Color.YELLOW);
  brushUp();
}

